# isoft-package-installer

./: CMakeLists.txt  README.md
cmake/: Findbzip2.cmake  Findelf.cmake  Findmagic.cmake
daemon/: CMakeLists.txt  app-pkg.c  app-pkg.h  daemon.c  daemon.h  deb-helper.c  deb-helper.h  debresolve.c  debresolve.h  extensions.c  files.c  files.h  fts.c  main.c  misc.c  misc.h  pack.c  package.c  package.h  reqprov.c  reqprov.h  rpm-helper.c  rpm-helper.h  rpmfc.c  types.h  utils.c  utils.h
data/: CMakeLists.txt  isoft-install-daemon.service.in  org.isoftlinux.Install.conf  org.isoftlinux.Install.service.in  org.isoftlinux.Install.xml
greeter/: CMakeLists.txt  installwidget.cpp  installwidget.h  isoft-package-installer.desktop  main.cpp  packagewidget.cpp  packagewidget.h  stepwidget.cpp  stepwidget.h  welcomewidget.cpp  welcomewidget.h
po/: CMakeLists.txt  isoftpackageinstaller.pot  zh_CN.po
tools/: CMakeLists.txt  deb2rpm.c
