install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/org.isoftlinux.Install.xml" DESTINATION "${CMAKE_INSTALL_FULL_DATAROOTDIR}/dbus-1/interfaces")

install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/org.isoftlinux.Install.conf" DESTINATION "${CMAKE_INSTALL_SYSCONFDIR}/dbus-1/system.d")

configure_file("${CMAKE_CURRENT_SOURCE_DIR}/org.isoftlinux.Install.service.in" "${CMAKE_CURRENT_BINARY_DIR}/org.isoftlinux.Install.service")
install(FILES "${CMAKE_CURRENT_BINARY_DIR}/org.isoftlinux.Install.service" DESTINATION "${CMAKE_INSTALL_FULL_DATAROOTDIR}/dbus-1/system-services")

if(SYSTEMD_FOUND)
    configure_file("${CMAKE_CURRENT_SOURCE_DIR}/isoft-install-daemon.service.in" "${CMAKE_CURRENT_BINARY_DIR}/isoft-install-daemon.service")
    install(FILES "${CMAKE_CURRENT_BINARY_DIR}/isoft-install-daemon.service" DESTINATION "${SYSTEMD_SYSTEM_UNIT_DIR}")
endif()
